; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_raid5-ppl.c_ppl_io_pool_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_raid5-ppl.c_ppl_io_pool_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kmem_cache = type { i32 }
%struct.ppl_io_unit = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @ppl_io_pool_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ppl_io_pool_free(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.kmem_cache*, align 8
  %6 = alloca %struct.ppl_io_unit*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.kmem_cache*
  store %struct.kmem_cache* %8, %struct.kmem_cache** %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.ppl_io_unit*
  store %struct.ppl_io_unit* %10, %struct.ppl_io_unit** %6, align 8
  %11 = load %struct.ppl_io_unit*, %struct.ppl_io_unit** %6, align 8
  %12 = getelementptr inbounds %struct.ppl_io_unit, %struct.ppl_io_unit* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @__free_page(i32 %13)
  %15 = load %struct.kmem_cache*, %struct.kmem_cache** %5, align 8
  %16 = load %struct.ppl_io_unit*, %struct.ppl_io_unit** %6, align 8
  %17 = call i32 @kmem_cache_free(%struct.kmem_cache* %15, %struct.ppl_io_unit* %16)
  ret void
}

declare dso_local i32 @__free_page(i32) #1

declare dso_local i32 @kmem_cache_free(%struct.kmem_cache*, %struct.ppl_io_unit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
